--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Develop Your Leadership Voice" />
     <meta property="og:description" content="An immersive leadership voice coaching program delivered by Vijay Vikram Singh, the narrator's voice of Bigg Boss" />
-    <meta property="og:url" content="https://www.edmyst.com/develop-your-leadership-voice" />
+    <!--<meta property="og:url" content="https://www.edmyst.com/develop-your-leadership-voice" /> -->
     <meta property="og:site_name" content="EdMyst" />
-    <meta property="og:image" content="https://www.edmyst.com/public/leadershipvoice/assets/img/banner-img.png" />
+    <!-- <meta property="og:image" content="https://www.edmyst.com/public/leadershipvoice/assets/img/banner-img.png" /> -->
     <!-- CSS	============================================ -->
     <!-- Bootstrap CSS -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://www.edmyst.com/public/img/favicon-32x32.png">
