--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:description" content="An immersive leadership voice coaching program delivered by Vijay Vikram Singh, the narrator's voice of Bigg Boss" />
     <meta property="og:url" content="https://www.edmyst.com/develop-your-leadership-voice" />
     <meta property="og:site_name" content="EdMyst" />
-    <meta property="og:image" content="https://www.edmyst.com/public/leadershipvoice/assets/img/banner-img.png" />
+    <!-- <meta property="og:image" content="https://www.edmyst.com/public/leadershipvoice/assets/img/banner-img.png" /> -->
     <!-- CSS    ============================================ -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://www.edmyst.com/public/leadershipvoice/assets/css/vendor/bootstrap.min.css">
